# rust-graphql-gae-cloudsql

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  app.yaml
api/: Cargo.toml
api/src/: graph.rs  main.rs
api/src/graph/: inputs.rs  mutation.rs  outputs.rs  query.rs
app/: Cargo.toml  diesel.toml
app/src/: ddb.rs  lib.rs
app/src/application/: user.rs
app/src/ddb/: schema.rs  user.rs
app/src/domain/: user.rs
app/src/firebase/: auth.rs
db/: mysql.conf
db/initdb.d/: 1_ddl.sql
