[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
thiserror = "1.0.24"
async-trait = "0.1.48"
serde = "1.0.125"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.10.10", features = ["json"] }
serde_json = "1.0.64"